--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "@types/node": "11.10.5",
     "@types/react": "16.8.7",
     "@types/react-dom": "16.8.2",
+    "@types/react-jss": "^8.6.3",
+    "@types/react-router": "^4.4.4",
+    "@types/react-router-dom": "^4.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-jss": "^8.6.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "typescript": "3.3.3333"
   },
