--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-router-dom": "^4.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-icons": "^3.5.0",
     "react-jss": "^8.6.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
